Log the event type when unexpected events are seen.

This is to help diagnose a DCHECK being hit when unexpected pointer lock
mouse events arise.

BUG=843059
R=lfg@chromium.org

Change-Id: Ifffe9300d763135ff9b95b98e7054d6360e7ee4f
Reviewed-on: https://chromium-review.googlesource.com/1063710
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Commit-Queue: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559549}