third_party/blink/renderer/core/frame/web_frame_widget_base.cc
@@ -341,7 +341,7 @@ void WebFrameWidgetBase::PointerLockMouseEvent(
       event_type = EventTypeNames::mousemove;
       break;
     default:
-      NOTREACHED();
+      NOTREACHED() << input_event.GetType();
   }
 
   if (GetPage()) {
